general/Half Yearly Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;D:\ZZZ from E\JAVA\Half Yearly Project
-d
D:\ZZZ from E\JAVA\Half Yearly Project\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\ZZZ from E\JAVA\Half Yearly Project\Smith_no.java
<---- end of javadoc command ---->
Loading source file D:\ZZZ from E\JAVA\Half Yearly Project\Smith_no.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating D:\ZZZ from E\JAVA\Half Yearly Project\doc\Smith_no.html...
D:\ZZZ from E\JAVA\Half Yearly Project\twoDigit.java:13: error: ';' expected
            hwile(v>0)
                      ^
Generating D:\ZZZ from E\JAVA\Half Yearly Project\doc\package-frame.html...
Generating D:\ZZZ from E\JAVA\Half Yearly Project\doc\package-summary.html...
Generating D:\ZZZ from E\JAVA\Half Yearly Project\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating D:\ZZZ from E\JAVA\Half Yearly Project\doc\allclasses-frame.html...
Generating D:\ZZZ from E\JAVA\Half Yearly Project\doc\allclasses-noframe.html...
Generating D:\ZZZ from E\JAVA\Half Yearly Project\doc\index.html...
Generating D:\ZZZ from E\JAVA\Half Yearly Project\doc\stylesheet.css...
1 error
